# aideen-live-lab

./: .gitignore  Cargo.toml  README.md  VARIABLES_MOSTRADAS.md  index.html  package-lock.json  package.json
src/: App.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  parser.rs
src/components/: AppShell.tsx  BarChartsPanel.tsx  ChartsPanel.tsx  ComparisonTable.tsx  DashboardSummary.tsx  ExportPanel.tsx  FpmPipelinePanel.tsx  FutureLiveControlsPanel.tsx  Header.tsx  LineChartsPanel.tsx  LogImporter.tsx  MultiRunChartsPanel.tsx  PasteImporter.tsx  PdfExportPanel.tsx  PreDeqPanel.tsx  RawJsonPanel.tsx  RawTextPanel.tsx  RunDetail.tsx  RunList.tsx  Sidebar.tsx  SignalFlowPanel.tsx  SummaryCards.tsx  Tooltip.tsx  UtilityAlignmentPanel.tsx
src/hooks/: useLogWatcher.ts
src/samples/: sampleLog.ts
src/state/: useRunStore.ts
src/types/: metrics.ts
src/utils/: format.ts  runMetrics.ts  variableDescriptions.ts
